--- a/FordQuiz/Base.lproj/Main.storyboard
+++ b/FordQuiz/Base.lproj/Main.storyboard
@@ -1739,6 +1739,9 @@
                                 <fontDescription key="fontDescription" name="FordAntenna-Semibold" family="Ford Antenna" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="166" y="309" width="468" height="75"/>
+                                </variation>
                             </label>
                             <button opaque="NO" tag="200" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbL-EP-SLf">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -1757,7 +1760,8 @@
                                         <exclude reference="jc5-le-7MY"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=regular">
+                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="484" y="434" width="200" height="66"/>
                                     <mask key="constraints">
                                         <include reference="Dxr-8R-VmJ"/>
                                         <include reference="jc5-le-7MY"/>
@@ -1785,7 +1789,8 @@
                                         <exclude reference="lIA-fW-d0v"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=regular">
+                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="116" y="434" width="200" height="66"/>
                                     <mask key="constraints">
                                         <exclude reference="Tm0-a9-5Q7"/>
                                         <include reference="lIA-fW-d0v"/>
@@ -1800,6 +1805,9 @@
                                 <fontDescription key="fontDescription" name="FordAntenna-Bold" family="Ford Antenna" pointSize="21"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="270" y="264" width="261" height="25"/>
+                                </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yca-2p-qme">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
